2010-05-14  James Youngman  <jay@gnu.org>

	Move CSSC source code to src/ subdirectory.
	* configure.ac: move CSSC source to subdirectory src/.
	* Makefile.am: rename to src/Makefile.am.  The remaining makefile
	just sets SUBDIRS and EXTRA_DIST.
	* admin.cc: moved to src/admin.cc
	* bodyio.cc: moved to src/bodyio.cc
	* bodyio.h: moved to src/bodyio.h
	* canonify.cc: moved to src/canonify.cc
	* cap.cc: moved to src/cap.cc
	* cdc.cc: moved to src/cdc.cc
	* cleanup.h: moved to src/cleanup.h
	* cssc-assert.h: moved to src/cssc-assert.h
	* cssc.h: moved to src/cssc.h
	* defaults.h: moved to src/defaults.h
	* delta-iterator.cc: moved to src/delta-iterator.cc
	* delta-iterator.h: moved to src/delta-iterator.h
	* delta-table.cc: moved to src/delta-table.cc
	* delta-table.h: moved to src/delta-table.h
	* delta.cc: moved to src/delta.cc
	* delta.h: moved to src/delta.h
	* dtbl-prepend.cc: moved to src/dtbl-prepend.cc
	* encoding.cc: moved to src/encoding.cc
	* environment.cc: moved to src/environment.cc
	* except.h: moved to src/except.h
	* fatalsig.cc: moved to src/fatalsig.cc
	* fdclosed.cc: moved to src/fdclosed.cc
	* file.cc: moved to src/file.cc
	* file.h: moved to src/file.h
	* filediff.cc: moved to src/filediff.cc
	* filediff.h: moved to src/filediff.h
	* fileiter.cc: moved to src/fileiter.cc
	* fileiter.h: moved to src/fileiter.h
	* filelock.h: moved to src/filelock.h
	* filepos.h: moved to src/filepos.h
	* fnsplit.cc: moved to src/fnsplit.cc
	* get.cc: moved to src/get.cc
	* ioerr.h: moved to src/ioerr.h
	* l-split.cc: moved to src/l-split.cc
	* linebuf.cc: moved to src/linebuf.cc
	* linebuf.h: moved to src/linebuf.h
	* my-getopt.cc: moved to src/my-getopt.cc
	* my-getopt.h: moved to src/my-getopt.h
	* mylist.h: moved to src/mylist.h
	* myset.h: moved to src/myset.h
	* mystring.h: moved to src/mystring.h
	* pf-add.cc: moved to src/pf-add.cc
	* pf-del.cc: moved to src/pf-del.cc
	* pfile.cc: moved to src/pfile.cc
	* pfile.h: moved to src/pfile.h