@@ -1,10 +1,0 @@
-aclocal.m4
-stamp-h.in 
-config.h.in
-Makefile.in
-configure
-autom4te.cache
-INSTALL
-missing
-install-sh
-depcomp
