@@ -1,9 +1,0 @@
-Makefile.in
-config-info.texi
-cssc.info
-cssc.info-1
-cssc.info-2
-cssc.info-3
-cssc.info-4
-cssc.html
-texinfo.tex
