@@ -1,2 +1,0 @@
-Makefile.in
-configure autom4te.cache aclocal.m4
